# transformer-ml-project

./: .gitignore  README.md  hello.py  mps_check.py  pyproject.toml  requirements.txt
notebooks/: Untitled.ipynb  broadcasting.ipynb  fra_parsing_scratch.ipynb  optimizers.ipynb
scripts/: entropy_playground.py  test_char_data.py  test_enc_dec_inference.py  test_encoder_decoder.py  test_hello_data.py  test_hello_model.py  test_rnn_model.py  test_train_transformer.py  test_train_trivial_transformer.py  test_transformer.py
src/: attention.py  char_data.py  char_lstm.py  data_importer.py  decoder.py  encoder.py  encoder_decoder.py  hello_data.py  hello_model.py  jeeves_datasets.py  module_utils.py  positional_encoding.py  rnn_model.py  transformer.py  translation_data.py  trivial_dataset.py
src/api/: transformer.py
tests/: conftest.py  test_attention.py  test_char_data.py  test_data_importer.py  test_hello_model.py  test_jeeves_datasets.py  test_positional_encoding.py  test_rnn_model.py  test_transformer.py  test_trivial_dataset.py
